@@ -242,5 +242,8 @@ fwAlgTFTP=0
 vlan_double_tag=0
 simple_qos=0
 torrent_home=/media/sda1
+ping_check_on=0
+ping_check_time=300
+ping_check_interval=30
 IS_WIVE=YES
 CHECKMAC=YES
