@@ -596,6 +596,8 @@
 66) Add in /etc/profile variables needed for transmissions.<br>
 67) Umount all filesystem at reboot from goahead if CONFIG_USER_STORAGE is set.<br>
 68) Try samba3 fix show free space size.<br>
+69) Add pinger (lan/wifi/uplink) for wake up client devices and support uplink connections always on-line(ping_check_on/ping_check_time/
+	ping_check_interval variables on nvram. Need add in watchdog section WebUI).<br>
 
 
 <br><br>
